# Pollutocracy

./: ArrayUtils.hs  Clock.hs  Display.hs  FastRoughRNG.hs  Main.hs  Pollutocracy.cabal  README  README.md  SDL_Constants.hs  SDL_Constants.hsc  Sim.hs  compile.sh  foreignPollution.c  foreignPollution.h  run_after_compiling.sh
