name: Pollutocracy
version: 1.0
synopsis: An imaginary world
author: Isaac Dupree
license: GPL
build-type: Simple
cabal-version: >= 1.2

executable Pollutocracy
  main-is: Main.hs
  build-depends: base, array, random, GLUT, clock
  includes: foreignPollution.h
  c-sources: foreignPollution.c
  cc-options: -O3
  other-modules: ArrayUtils, Clock, Display, Sim
